--- a/src/components/css/main.css
+++ b/src/components/css/main.css
@@ -1,8 +1,23 @@
 .main {
-    padding: 10px;
+    padding: 10px 20px;
+}
+
+.phonetic-con {
+    display: flex;
+    align-items: center;
 }
 
 .word-text {
     font-size: 2.5em;
     margin: 0;
+}
+
+.word-play {
+    padding-top: 5px;
+    font-size: 36px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+.word-play:hover {
+    color: gray;
 }
