--- a/src/components/css/topbar.css
+++ b/src/components/css/topbar.css
@@ -50,5 +50,6 @@
     outline: none;
     border: none;
     font-size: 22px;
-    padding-left: 5px;
+    padding-left: 10px;
+    padding-right: 60px;
 }
